--- a/pak-ios/Info.plist
+++ b/pak-ios/Info.plist
@@ -31,7 +31,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.576896496368-jh24qbjghvjfmloucki8vd3j627j752u</string>
+				<string>com.googleusercontent.apps.576896496368-40227beiplejfefhpr56s8q50djkqkbj</string>
 			</array>
 		</dict>
 		<dict>
@@ -39,7 +39,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>pe.com.zp.PAKFoodsMarket</string>
+				<string>pe.com.zp.PAK</string>
 			</array>
 		</dict>
 	</array>
